I FIXED IT issue - safari handles images differently when i loaded index page on safari, the project-entry div would expand to the full-sized image's height. https://stackoverflow.com/questions/57516373/image-stretching-in-flexbox-in-safari following instructions to above link fixed the issue "The default setting for the align-items property is stretch. Most major browsers handle this sensibly, stretching the image within the confines of the container.
For whatever reason, Safari stretches the image to its natural height,
taking the container along for the ride."

thank god it got fixed.

--- a/css/main.css
+++ b/css/main.css
@@ -165,9 +165,6 @@ p {
 /*a single project entry*/
 .project-entry {
     margin-bottom: 16px;
-
-    border: 4px solid red;
-    background: red;
 }
 
 .project-entry a {
